more relative path updates

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@ layout: default
       <ul id="reasons-to-believe-banner" class="items-3">
           <li>
               <span class="symbol">
-                <img src="/img/icon_home_helpinghands.png" alt="helping hands">
+                <img src="img/icon_home_helpinghands.png" alt="helping hands">
               </span>
               <h2 class="tag">Your health in good hands</h2>
               <span class="reason">Dr. Chang is dedicated to utilizing her knowledge, skill, and gentle care in partnering with her patients to help them achieve a healthy and beautiful smile.</span>
           </li>
           <li>
               <span class="symbol">
-                <img src="/img/icon_home_trust.png" alt="trust">
+                <img src="img/icon_home_trust.png" alt="trust">
               </span>
               <h2 class="tag">Experience you can trust</h2>
               <span class="reason">Dr. Chang places the utmost value on the integrity of her dental care and always has her patients' best interests at heart. As a result, she has been blessed with over 25 years of experience caring for patients that trust her.</span>
           </li>
           <li>
               <span class="symbol">
-                <img src="/img/icon_home_smile.png" alt="smile">
+                <img src="img/icon_home_smile.png" alt="smile">
               </span>
               <h2 class="tag">Service to make you smile</h2>
               <span class="reason">Our office strives to provide an experience that is comfortable, warm, and relaxed for you and your family. We also are committed to excellent service for our patients with open and clear communication</span>
