relative path issue update, see https://github.com/jekyll/jekyll/pull/1291/files

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -16,12 +16,12 @@ title: About Us
   </nav>
   <section class="page-content">
       <figure>
-          <img src="/img/image_about_banner.png" alt="about us banner">  
+          <img src="{{site.baseurl}}/img/image_about_banner.png" alt="about us banner">  
       </figure>
 
       <section class="drchang-bio">
         <figure class="drchang-profile-pic">
-          <img src="/img/image_bio_drchang.png" alt="Dr Chang's profile picture">
+          <img src="{{site.baseurl}}/img/image_bio_drchang.png" alt="Dr Chang's profile picture">
         </figure>
         <h1 id="Meet-Dr-Chang">Meet Dr. Quyen Chang</h1>
         <p>Dr. Quyen Chang is a dedicated family dentist who is committed to establishing and maintaining the health of your teeth and mouth.  She displays an unparalleled level of gentleness and care for all of her patients, which she couples with her expertise and skill to provide excellent dental care in the Triangle area.  She is a proud member of the American Association of Women Dentists and the Raleigh-Wake County Dental Society.</p>
@@ -33,7 +33,7 @@ title: About Us
         <h1 id="Meet-the-Team">Meet the Team</h1>
         <section class="teammate">
           <figure>
-            <img src="/img/image_bio_rosa.png" alt="Rosa's profile picture">
+            <img src="{{site.baseurl}}/img/image_bio_rosa.png" alt="Rosa's profile picture">
           </figure>
           <h3 class="name">Rosa</h3>
           <h4 class="job">Assistant</h4>
@@ -41,7 +41,7 @@ title: About Us
         </section>
         <section class="teammate">
           <figure>
-            <img src="/img/image_bio_barbara.png" alt="Barbara's profile picture">
+            <img src="{{site.baseurl}}/img/image_bio_barbara.png" alt="Barbara's profile picture">
           </figure>
           <h3 class="name">Barbara</h3>
           <h4 class="job">Hygienist</h4>
@@ -49,7 +49,7 @@ title: About Us
         </section>
         <section class="teammate">
           <figure>
-            <img src="/img/image_bio_stella.png" alt="Stella's profile picture">
+            <img src="{{site.baseurl}}/img/image_bio_stella.png" alt="Stella's profile picture">
           </figure>
           <h3 class="name">Stella</h3>
           <h4 class="job">Office Administrator</h4>
