--- a/dentalcare/bleaching/index.html
+++ b/dentalcare/bleaching/index.html
@@ -6,7 +6,7 @@ care: bleaching
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Bleaching</h1>
     <p>Dental bleaching, or tooth whitening, has become a very popular and effective practice for people who are concerned about staining of their teeth.</p>
