--- a/dentalcare/bridges/index.html
+++ b/dentalcare/bridges/index.html
@@ -6,7 +6,7 @@ care: bridges
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Bridges</h1>
     <p>In certain circumstances when a dental implant is not recommended to replace missing teeth, a dental bridge is another good option.</p>
