--- a/dentalcare/cleanings/index.html
+++ b/dentalcare/cleanings/index.html
@@ -6,7 +6,7 @@ care: cleanings
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Cleanings</h1>
     <p>Regular dental cleanings is another foundational piece to achieving and maintaining a healthy mouth.</p>
