--- a/dentalcare/crowns/index.html
+++ b/dentalcare/crowns/index.html
@@ -6,7 +6,7 @@ care: crowns
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Crowns (Caps)</h1>
     <p>There are instances when the decay, or cavity, found in a tooth is too large to be reliably treated with a filling.  For example, if the cavity has gotten large to the point where after it is removed, there is not much healthy tooth structure left to support a filling, Dr. Chang may recommend that the tooth be restored with a crown (or cap) to help ensure that the tooth and restoration will last as long as possible.  Other instances when crowns may be necessary include, but aren't limited to:</p>
