--- a/dentalcare/dentures/index.html
+++ b/dentalcare/dentures/index.html
@@ -6,7 +6,7 @@ care: dentures
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Dentures</h1>
     <p>For patients with many missing teeth, a removable denture can be made that is worn during waking hours and removed during sleeping hours.  The two main types of removable dentures are complete dentures and partial dentures.</p>
