--- a/dentalcare/extractions/index.html
+++ b/dentalcare/extractions/index.html
@@ -6,7 +6,7 @@ care: extractions
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Extractions</h1>
     <p>In unfortunate situations, a tooth can be too far decayed, cracked, or unrestorable to try and treat it with a filling, crown, or root canal treatment.  We are dedicated to helping our patients keep the God-given teeth that they have, because nothing can adequately replace those teeth.  However, if the prognosis of a tooth, or likelihood of keeping the tooth, is poor, then we will recommend removing the tooth and discuss options to replace the tooth.</p>
