--- a/dentalcare/fillings/index.html
+++ b/dentalcare/fillings/index.html
@@ -6,7 +6,7 @@ care: fillings
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Fillings</h1>
     <p>If there is any active decay, or cavities, found on your teeth during your routine dental exam, Dr. Chang will recommend that the cavities be removed and treated. If the cavity is a small one, it can often be treated with a filling. Dr. Chang is committed to preserving as much healthy natural tooth structure as possible when removing cavities in order to ensure the longevity of her patients' God-given teeth. However, there are times when the cavities are too large to be properly treated with a filling. In those cases, Dr. Chang will recommend other options for treating the cavities based on her professional opinion.</p>
