--- a/dentalcare/implants/index.html
+++ b/dentalcare/implants/index.html
@@ -6,7 +6,7 @@ care: implants
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Implant Crowns</h1>
     <p>Losing a tooth or multiple teeth creates an empty space where the tooth or teeth used to be. These empty spaces can create problems, such as:</p>
