--- a/dentalcare/index.html
+++ b/dentalcare/index.html
@@ -5,7 +5,7 @@ category: dentalcare
 
 <section class="page-content">
   <figure>
-      <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+      <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
   </figure>
   <h1>Our Services</h1>
   <p>We understand that going to the dentist means different things to different people.  For some people, it can cause anxiety and stress.  That is why Dr. Chang and our team strive to provide gentle, attentive care in a relaxed environment for all of our patients.  For other people, it is a pleasant experience and an opportunity to learn more about improving their dental health.  That is why Dr. Chang and our team hope to develop meaningful relationships of trust and give all of our patients person-specific information regarding their dental health.</p>
