--- a/dentalcare/nightguards/index.html
+++ b/dentalcare/nightguards/index.html
@@ -6,7 +6,7 @@ care: nightguards
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Nightguards</h1>
     <p>It is not uncommon for adults and children to grind their teeth at night, or even during the day. Excessive grinding of the teeth is a condition known as bruxism. Studies show that anywhere from 8-31% of the general population suffers from bruxism.</p>
