--- a/dentalcare/rootcanals/index.html
+++ b/dentalcare/rootcanals/index.html
@@ -6,7 +6,7 @@ care: rootcanals
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Root Canals</h1>
     <p>When a tooth is infected because of a deep cavity, the tooth can not only cause dental pain, but the infection can potentially spread to the rest of the body if not treated as soon as possible.  The best way to treat this infection and keep the tooth is with root canal treatment. During root canal treatment, the nerve and blood supply of the tooth is removed from inside the tooth and replaced with a filling material. This removes the source of the infection and will also remove the dental pain, allowing for the remaining healthy tooth structure to be saved.</p>
