--- a/patientinfo/index.html
+++ b/patientinfo/index.html
@@ -13,7 +13,7 @@ category: patientinfo
   </nav>
   <section class="page-content">
       <figure>
-          <img src="/img/image_patientinfo_banner.png" alt="patient info banner">
+          <img src="{{site.baseurl}}/img/image_patientinfo_banner.png" alt="patient info banner">
       </figure>
   <h1 id="Your-Appointment">Your Appointment</h1>
   <p>At your first appointment, you can expect Dr. Chang to provide a complete examination that includes a diagnosis of any dental decay (cavities) and periodontal disease (gum disease) present, and a screening for oral cancer.  Also included is a review of your medical and dental history as well as radiographs (x-rays) to help us determine the best plan of action for achieving and maintaining your dental health.  If you have a primary concern or issue you would like Dr. Chang to take special note of, please inform her of this so she can best address your concerns in the context of your entire dental health.</p>
