update dentalcare/veneers page, relative path issue

--- a/dentalcare/veneers/index.html
+++ b/dentalcare/veneers/index.html
@@ -6,7 +6,7 @@ care: veneers
 
 <section class="page-content">
     <figure>
-        <img src="/img/image_dentalcare_banner.png" alt="dental care banner">  
+        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
     </figure>
     <h1>Veneers</h1>
     <p>There are instances when your front teeth either has stain that cannot be removed by tooth whitening, gaps between your teeth that cannot be easily fixed with braces or fillings, or other cosmetic concerns that cannot be more conservatively treated with predictable cosmetic results.</p>
