--- a/dentalcare/index.html
+++ b/dentalcare/index.html
@@ -12,22 +12,22 @@ category: dentalcare
   <p>While each person's needs are different and unique, this section of our website hopes to give some general information regarding common dental procedures Dr. Chang provides for her patients.  With this information, you can have confidence coming to our office of what you can expect, and Dr. Chang and our team can then give you more specific details about your personal dental needs and options for treatment.</p>
   <section class="dentalcare-links">
     <ul>
-      <li><a href="{{site.baseurl}}//dentalcare/exams/">Exams and X-Rays</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/cleanings/">Cleanings</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/fillings/">Fillings</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/crowns/">Crowns (Caps)</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/exams/">Exams and X-Rays</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/cleanings/">Cleanings</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/fillings/">Fillings</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/crowns/">Crowns (Caps)</a></li>
     </ul>
     <ul>
-      <li><a href="{{site.baseurl}}//dentalcare/implants/">Implant Crowns</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/bridges/">Bridges</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/dentures/">Dentures</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/rootcanals/">Root Canals</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/implants/">Implant Crowns</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/bridges/">Bridges</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/dentures/">Dentures</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/rootcanals/">Root Canals</a></li>
     </ul>
     <ul>
-      <li><a href="{{site.baseurl}}//dentalcare/extractions/">Extractions</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/nightguards/">Nightguards</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/bleaching/">Bleaching</a></li>
-      <li><a href="{{site.baseurl}}//dentalcare/veneers/">Veneers</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/extractions/">Extractions</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/nightguards/">Nightguards</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/bleaching/">Bleaching</a></li>
+      <li><a href="{{site.baseurl}}/dentalcare/veneers/">Veneers</a></li>
     </ul>
   </section>
 </section>
