dental care pages refactor, abstract the figure into an includes file

--- a/dentalcare/bleaching/index.html
+++ b/dentalcare/bleaching/index.html
@@ -5,9 +5,8 @@ care: bleaching
 ---
 
 <section class="page-content">
-    <figure>
-        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-    </figure>
+    {% include dentalcare/figure.html %}
+
     <h1>Bleaching</h1>
     <p>Dental bleaching, or tooth whitening, has become a very popular and effective practice for people who are concerned about staining of their teeth.</p>
     <p>Dental bleaching is readily available to anyone who is interested. A good starting point for most patients is the over-the-counter bleach strips that can be found at most grocery stores or drug stores. The level of bleach material in these products is lower than what we can provide in our office, but is a good first step in seeing whether bleaching is effective for you.</p>
