--- a/dentalcare/cleanings/index.html
+++ b/dentalcare/cleanings/index.html
@@ -5,9 +5,8 @@ care: cleanings
 ---
 
 <section class="page-content">
-    <figure>
-        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-    </figure>
+    {% include dentalcare/figure.html %}
+
     <h1>Cleanings</h1>
     <p>Regular dental cleanings is another foundational piece to achieving and maintaining a healthy mouth.</p>
     <p>For patients without any active gum (periodontal) disease, a professional dental cleaning every 6 months is generally recommended.  These dental cleanings remove plaque and calculus (or tartar) from the surfaces of your teeth, which then gives you a "clean slate" to maintain at home with daily brushing and flossing.</p>
