--- a/dentalcare/dentures/index.html
+++ b/dentalcare/dentures/index.html
@@ -5,9 +5,8 @@ care: dentures
 ---
 
 <section class="page-content">
-    <figure>
-        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-    </figure>
+    {% include dentalcare/figure.html %}
+
     <h1>Dentures</h1>
     <p>For patients with many missing teeth, a removable denture can be made that is worn during waking hours and removed during sleeping hours.  The two main types of removable dentures are complete dentures and partial dentures.</p>
     <p>Complete dentures are made when a patient is missing all of his or her teeth in an arch.  For example, if all the upper teeth are missing, an upper complete denture can be made to replace all of those teeth.  The same would apply for patients with all lower teeth missing.</p>
