--- a/dentalcare/exams/index.html
+++ b/dentalcare/exams/index.html
@@ -5,9 +5,8 @@ care: exams
 ---
 
 <section class="page-content">
-    <figure>
-        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-    </figure>
+    {% include dentalcare/figure.html %}
+
     <h1>Exams and X-rays</h1>
     <p>Dr. Chang strongly believes that regular dental exams are the foundation for maintaining excellent oral health, because it allows for us, as your dental team, to evaluate your existing dental condition and to diagnose any new problems or disease that may arise.  Included in each exam appointment is:</p>
     <ul>
