--- a/dentalcare/rootcanals/index.html
+++ b/dentalcare/rootcanals/index.html
@@ -5,9 +5,8 @@ care: rootcanals
 ---
 
 <section class="page-content">
-    <figure>
-        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-    </figure>
+    {% include dentalcare/figure.html %}
+
     <h1>Root Canals</h1>
     <p>When a tooth is infected because of a deep cavity, the tooth can not only cause dental pain, but the infection can potentially spread to the rest of the body if not treated as soon as possible.  The best way to treat this infection and keep the tooth is with root canal treatment. During root canal treatment, the nerve and blood supply of the tooth is removed from inside the tooth and replaced with a filling material. This removes the source of the infection and will also remove the dental pain, allowing for the remaining healthy tooth structure to be saved.</p>
     <p>Root canal treatments are also done in other situations, including: a tooth that has been traumatized by a bump or accident, a cracked tooth where the crack has not extended too far down to the root of the tooth, or if there is not enough tooth structure left for a crown and a post needs to be placed in the tooth to support the crown.</p>
