--- a/dentalcare/implants/index.html
+++ b/dentalcare/implants/index.html
@@ -5,9 +5,8 @@ care: implants
 ---
 
 <section class="page-content">
-    <figure>
-        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-    </figure>
+    {% include dentalcare/figure.html %}
+
     <h1>Implant Crowns</h1>
     <p>Losing a tooth or multiple teeth creates an empty space where the tooth or teeth used to be. These empty spaces can create problems, such as:</p>
     <ul>
