--- a/dentalcare/index.html
+++ b/dentalcare/index.html
@@ -4,30 +4,29 @@ category: dentalcare
 ---
 
 <section class="page-content">
-  <figure>
-      <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-  </figure>
-  <h1>Our Services</h1>
-  <p>We understand that going to the dentist means different things to different people.  For some people, it can cause anxiety and stress.  That is why Dr. Chang and our team strive to provide gentle, attentive care in a relaxed environment for all of our patients.  For other people, it is a pleasant experience and an opportunity to learn more about improving their dental health.  That is why Dr. Chang and our team hope to develop meaningful relationships of trust and give all of our patients person-specific information regarding their dental health.</p>
-  <p>While each person's needs are different and unique, this section of our website hopes to give some general information regarding common dental procedures Dr. Chang provides for her patients.  With this information, you can have confidence coming to our office of what you can expect, and Dr. Chang and our team can then give you more specific details about your personal dental needs and options for treatment.</p>
-  <section class="dentalcare-links">
-    <ul>
-      <li><a href="{{site.baseurl}}/dentalcare/exams/">Exams and X-Rays</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/cleanings/">Cleanings</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/fillings/">Fillings</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/crowns/">Crowns (Caps)</a></li>
-    </ul>
-    <ul>
-      <li><a href="{{site.baseurl}}/dentalcare/implants/">Implant Crowns</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/bridges/">Bridges</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/dentures/">Dentures</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/rootcanals/">Root Canals</a></li>
-    </ul>
-    <ul>
-      <li><a href="{{site.baseurl}}/dentalcare/extractions/">Extractions</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/nightguards/">Nightguards</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/bleaching/">Bleaching</a></li>
-      <li><a href="{{site.baseurl}}/dentalcare/veneers/">Veneers</a></li>
-    </ul>
-  </section>
+    {% include dentalcare/figure.html %}
+
+    <h1>Our Services</h1>
+    <p>We understand that going to the dentist means different things to different people.  For some people, it can cause anxiety and stress.  That is why Dr. Chang and our team strive to provide gentle, attentive care in a relaxed environment for all of our patients.  For other people, it is a pleasant experience and an opportunity to learn more about improving their dental health.  That is why Dr. Chang and our team hope to develop meaningful relationships of trust and give all of our patients person-specific information regarding their dental health.</p>
+    <p>While each person's needs are different and unique, this section of our website hopes to give some general information regarding common dental procedures Dr. Chang provides for her patients.  With this information, you can have confidence coming to our office of what you can expect, and Dr. Chang and our team can then give you more specific details about your personal dental needs and options for treatment.</p>
+    <section class="dentalcare-links">
+        <ul>
+            <li><a href="{{site.baseurl}}/dentalcare/exams/">Exams and X-Rays</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/cleanings/">Cleanings</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/fillings/">Fillings</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/crowns/">Crowns (Caps)</a></li>
+        </ul>
+        <ul>
+            <li><a href="{{site.baseurl}}/dentalcare/implants/">Implant Crowns</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/bridges/">Bridges</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/dentures/">Dentures</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/rootcanals/">Root Canals</a></li>
+        </ul>
+        <ul>
+            <li><a href="{{site.baseurl}}/dentalcare/extractions/">Extractions</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/nightguards/">Nightguards</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/bleaching/">Bleaching</a></li>
+            <li><a href="{{site.baseurl}}/dentalcare/veneers/">Veneers</a></li>
+        </ul>
+    </section>
 </section>
