--- a/dentalcare/nightguards/index.html
+++ b/dentalcare/nightguards/index.html
@@ -5,9 +5,8 @@ care: nightguards
 ---
 
 <section class="page-content">
-    <figure>
-        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-    </figure>
+    {% include dentalcare/figure.html %}
+
     <h1>Nightguards</h1>
     <p>It is not uncommon for adults and children to grind their teeth at night, or even during the day. Excessive grinding of the teeth is a condition known as bruxism. Studies show that anywhere from 8-31% of the general population suffers from bruxism.</p>
     <p>Some symptoms of bruxism include sore jaws, headaches, or sensitive teeth, but sometimes bruxism can continue undetected unless a sleeping partner or parent notices it while a person is sleeping. Signs of bruxism can occur in the mouth, and those would include tooth wear, gum recession, or chipped teeth or restorations.</p>
