--- a/dentalcare/veneers/index.html
+++ b/dentalcare/veneers/index.html
@@ -5,9 +5,8 @@ care: veneers
 ---
 
 <section class="page-content">
-    <figure>
-        <img src="{{site.baseurl}}/img/image_dentalcare_banner.png" alt="dental care banner">  
-    </figure>
+    {% include dentalcare/figure.html %}
+
     <h1>Veneers</h1>
     <p>There are instances when your front teeth either has stain that cannot be removed by tooth whitening, gaps between your teeth that cannot be easily fixed with braces or fillings, or other cosmetic concerns that cannot be more conservatively treated with predictable cosmetic results.</p>
     <p>Depending on each patient's individual concerns and needs, veneers can be a good option for anyone who is interested in fixing his or her smile.  Please ask Dr. Chang to find out whether veneers is a good option for you.</p>
