adding Tim's bio onto the 'About Us' page

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -9,6 +9,7 @@ title: About Us
       <h1>About Us</h1>
       <section>
         <h2><a href="#Meet-Dr-Chang">Meet Dr. Quyen Chang</a></h2>
+        <h2><a href="#Meet-Dr-TimChang">Meet Dr. Timothy Chang</a></h2>
         <h2><a href="#Meet-the-Team">Meet the Team</a></h2>
         <h2><a href="#Our-History">History of the Practice</a></h2>
         <h2><a href="#Our-Mission">Our Mission</a></h2>
@@ -16,7 +17,7 @@ title: About Us
   </nav>
   <section class="page-content">
       <figure>
-          <img src="{{site.baseurl}}/img/image_about_banner.png" alt="about us banner">  
+          <img src="{{site.baseurl}}/img/image_about_banner.png" alt="about us banner">
       </figure>
 
       <section class="drchang-bio">
@@ -27,6 +28,16 @@ title: About Us
         <p>Dr. Quyen Chang is a dedicated family dentist who is committed to establishing and maintaining the health of your teeth and mouth.  She displays an unparalleled level of gentleness and care for all of her patients, which she couples with her expertise and skill to provide excellent dental care in the Triangle area.  She is a proud member of the American Association of Women Dentists and the Raleigh-Wake County Dental Society.</p>
         <p>Dr. Chang received her undergraduate degree at Meredith College in Raleigh, North Carolina, and graduated from the University of North Carolina School of Dentistry in 1987.  Not longer after she graduated, she opened her own practice in Raleigh, where she has been practicing for over 25 years.  Over the years, Dr. Chang has developed a countless number of relationships through providing dental care and restoring oral health in her community.  She has cherished these opportunities and continues to value getting to know her patients on both the dental and non-dental front.  Her ability to connect with patients is partly attributed to her fluency in four different languages: English, Mandarin, Cantonese, and Vietnamese.</p>
         <p>Dr. Chang is happily married to her husband, David, and together they have two sons, Timothy and Joshua.  Outside of her dental practice, Dr. Chang enjoys traveling, gardening, swimming, and Sudoku puzzles.  She is also an active member at her church, Raleigh Chinese Christian Church, where she has been attending for over 25 years.</p>
+      </section>
+
+      <section class="drchang-bio">
+        <figure class="drchang-profile-pic">
+          <img src="{{site.baseurl}}/img/image_bio_timchang.png" alt="Dr Timothy Chang's profile picture">
+        </figure>
+        <h1 id="Meet-Dr-TimChang">Meet Dr. Timothy Chang</h1>
+        <p>Dr. Timothy Chang is a caring family dentist who understands the value of your oral health in relation to your overall health.  He has a desire to build relationships with his patients so that he can better treat your dental needs and provide outstanding care.  He is a proud member of the American Dental Association.</p>
+        <p>Dr. Timothy Chang is the eldest son of Dr. Quyen Chang.  He was born and raised in the Raleigh area, and received his bachelor’s degrees with highest distinctions in Biology and Mathematics at the University of North Carolina at Chapel Hill in 2008.  Following his mother’s footsteps, he graduated from the University of North Carolina at Chapel Hill School of Dentistry with his Doctor of Dental Surgery degree in 2012.  That summer, he and his wife, Tina, moved to Seattle, Washington for Tina’s residency training in family medicine at Group Health Cooperative.  During his time in Seattle, Dr. Chang worked as an associate family dentist with Graham T. Egger, DDS, and gained valuable experience there.  In 2015, Tina graduated from her residency program, had their first child, Adeline, and decided to move back to North Carolina to be closer to their families.</p>
+        <p>In his free time, Dr. Chang enjoys spending time with his family, running, hiking, playing basketball, reading, and eating.  He is a big fan of UNC men’s basketball as well as the Carolina Panthers.</p>
       </section>
 
       <section class="team">
