update patient info page content

--- a/patientinfo/index.html
+++ b/patientinfo/index.html
@@ -36,7 +36,7 @@ category: patientinfo
     <li>Delta Dental</li>
     <li>HealthSmart</li>
   </ul>
-  <p>We will gladly accept other dental insurance plans as long as they allow you to see out-of-network providers.</p>
+  <p>We will gladly accept other dental insurance plans (such as, but not limited to, Ameritas, Blue Cross Blue Shield, Metlife, and United Concordia) as long as they allow you to see out-of-network providers.</p>
   <p>If you have any other questions regarding finances or insurance, do not hesitate to call our office at (919) 783-6551.</p>
   </section>
 </section>
