--- a/contactus/index.html
+++ b/contactus/index.html
@@ -26,11 +26,11 @@ category: contactus
   </nav>
   <section class="page-content">
       <figure>
-          <img src="{{site.baseurl}}/img/image_contactus_banner.png" alt="contact us banner">  
+          <img src="{{site.baseurl}}/img/image_contactus_banner.png" alt="contact us banner">
       </figure>
       <h1>Location</h1>
       <p>Our office is conveniently located south of the I-440 Beltline on Six Forks Road in Raleigh, near North Hills Mall. The address is 3388 Six Forks Road, Raleigh, NC, 27609</p>
-      <section class="/contactus-map">
+      <section class="contactus-map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3234.8999245635005!2d-78.63276499999999!3d35.826931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac58c0c0790af1%3A0xe500c455547a95e9!2s3388+Six+Forks+Rd%2C+Raleigh%2C+NC+27609!5e0!3m2!1sen!2sus!4v1433101039608" width="600" height="450" frameborder="0" style="border:0"></iframe>
       </section>
   </section>
