add email into contact info table

--- a/contactus/index.html
+++ b/contactus/index.html
@@ -8,20 +8,7 @@ category: contactus
       <h1>Contact Us</h1>
       <section>
         <p>Please contact us with any questions you many have, or if you are interested in scheduling an appointment</p>
-        <table>
-            <tr>
-                <td>Phone:</td>
-                <td><a href="tel:919-783-6551">(919) 783-6551</a></td>
-            </tr>
-            <tr>
-                <td>Location:</td>
-                <td><a href="https://www.google.com/maps?q=3388+Six+Forks+Road,+Raleigh,+NC+27609">3388 Six Forks Road</a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td><a href="https://www.google.com/maps?q=3388+Six+Forks+Road,+Raleigh,+NC+27609">Raleigh, NC 27609</a></td>
-            </tr>
-        </table>
+        {% include contactinfo.html %}
       </section>
   </nav>
   <section class="page-content">
