--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -21,22 +21,22 @@ title: About Us
       </figure>
 
       <section class="drchang-bio">
+        <h1 id="Meet-Dr-Chang">Meet Dr. Quyen Chang</h1>
         <figure class="drchang-profile-pic">
           <img src="{{site.baseurl}}/img/image_bio_drchang.png" alt="Dr Chang's profile picture">
         </figure>
-        <h1 id="Meet-Dr-Chang">Meet Dr. Quyen Chang</h1>
-        <p>Dr. Quyen Chang is a dedicated family dentist who is committed to establishing and maintaining the health of your teeth and mouth.  She displays an unparalleled level of gentleness and care for all of her patients, which she couples with her expertise and skill to provide excellent dental care in the Triangle area.  She is a proud member of the American Association of Women Dentists and the Raleigh-Wake County Dental Society.</p>
+        <p class="mobile-show">Dr. Quyen Chang is a dedicated family dentist who is committed to establishing and maintaining the health of your teeth and mouth.  She displays an unparalleled level of gentleness and care for all of her patients, which she couples with her expertise and skill to provide excellent dental care in the Triangle area.  She is a proud member of the American Association of Women Dentists and the Raleigh-Wake County Dental Society.</p>
         <p>Dr. Chang received her undergraduate degree at Meredith College in Raleigh, North Carolina, and graduated from the University of North Carolina School of Dentistry in 1987.  Not longer after she graduated, she opened her own practice in Raleigh, where she has been practicing for over 25 years.  Over the years, Dr. Chang has developed a countless number of relationships through providing dental care and restoring oral health in her community.  She has cherished these opportunities and continues to value getting to know her patients on both the dental and non-dental front.  Her ability to connect with patients is partly attributed to her fluency in four different languages: English, Mandarin, Cantonese, and Vietnamese.</p>
         <p>Dr. Chang is happily married to her husband, David, and together they have two sons, Timothy and Joshua.  Outside of her dental practice, Dr. Chang enjoys traveling, gardening, swimming, and Sudoku puzzles.  She is also an active member at her church, Raleigh Chinese Christian Church, where she has been attending for over 25 years.</p>
       </section>
 
       <section class="drchang-bio">
+        <h1 id="Meet-Dr-TimChang">Meet Dr. Timothy Chang</h1>
         <figure class="drchang-profile-pic">
           <img src="{{site.baseurl}}/img/image_bio_timchang.png" alt="Dr Timothy Chang's profile picture">
         </figure>
-        <h1 id="Meet-Dr-TimChang">Meet Dr. Timothy Chang</h1>
         <p>Dr. Timothy Chang is a caring family dentist who understands the value of your oral health in relation to your overall health.  He has a desire to build relationships with his patients so that he can better treat your dental needs and provide outstanding care.  He is a proud member of the American Dental Association.</p>
-        <p>Dr. Timothy Chang is the eldest son of Dr. Quyen Chang.  He was born and raised in the Raleigh area, and received his bachelor’s degrees with highest distinctions in Biology and Mathematics at the University of North Carolina at Chapel Hill in 2008.  Following his mother’s footsteps, he graduated from the University of North Carolina at Chapel Hill School of Dentistry with his Doctor of Dental Surgery degree in 2012.  That summer, he and his wife, Tina, moved to Seattle, Washington for Tina’s residency training in family medicine at Group Health Cooperative.  During his time in Seattle, Dr. Chang worked as an associate family dentist with Graham T. Egger, DDS, and gained valuable experience there.  In 2015, Tina graduated from her residency program, had their first child, Adeline, and decided to move back to North Carolina to be closer to their families.</p>
+        <p class="mobile-show">Dr. Timothy Chang is the eldest son of Dr. Quyen Chang.  He was born and raised in the Raleigh area, and received his bachelor’s degrees with highest distinctions in Biology and Mathematics at the University of North Carolina at Chapel Hill in 2008.  Following his mother’s footsteps, he graduated from the University of North Carolina at Chapel Hill School of Dentistry with his Doctor of Dental Surgery degree in 2012.  That summer, he and his wife, Tina, moved to Seattle, Washington for Tina’s residency training in family medicine at Group Health Cooperative.  During his time in Seattle, Dr. Chang worked as an associate family dentist with Graham T. Egger, DDS, and gained valuable experience there.  In 2015, Tina graduated from her residency program, had their first child, Adeline, and decided to move back to North Carolina to be closer to their families.</p>
         <p>In his free time, Dr. Chang enjoys spending time with his family, running, hiking, playing basketball, reading, and eating.  He is a big fan of UNC men’s basketball as well as the Carolina Panthers.</p>
       </section>
 
@@ -68,12 +68,16 @@ title: About Us
         </section>
       </section>
 
-      <h1 id="Our-History">History of the Practice</h1>
-      <p>In 1988, Dr. Quyen Chang opened the doors to her practice to the Raleigh community.  As one of the first dentists of Asian descent practicing in the area at the time, she steadily grew a loyal patient base simply by word-of-mouth and internal referrals.  Patients always complimented her incredible kindness and gentleness in the care she provided, and the relationships that were built in the practice continued to flourish.</p>
-      <p>After twenty-five years, the Dr. Chang continues to provide quality dental care for her patients, and relies heavily on word-of-mouth referrals from her trusted patients to continue serving the Raleigh community.  She feels blessed for each and every day that she is able to help her patients achieve and maintain a healthy smile, all the while building meaningful and lasting relationships.</p>
+      <section class="history">
+        <h1 id="Our-History">History of the Practice</h1>
+        <p>In 1988, Dr. Quyen Chang opened the doors to her practice to the Raleigh community.  As one of the first dentists of Asian descent practicing in the area at the time, she steadily grew a loyal patient base simply by word-of-mouth and internal referrals.  Patients always complimented her incredible kindness and gentleness in the care she provided, and the relationships that were built in the practice continued to flourish.</p>
+        <p>After twenty-five years, the Dr. Chang continues to provide quality dental care for her patients, and relies heavily on word-of-mouth referrals from her trusted patients to continue serving the Raleigh community.  She feels blessed for each and every day that she is able to help her patients achieve and maintain a healthy smile, all the while building meaningful and lasting relationships.</p>
+      </section>
 
-      <h1 id="Our-Mission">Our Mission</h1>
-      <p>Our dental team is dedicated to provide the best possible patient care for our patients.  We value the relationships that are formed and developed through the dental care we provide, and are committed to partner with our patients to achieve and maintain the best possible oral, and overall, health for them.  We know all of our patients are unique individuals who require personalized quality care, and thus make every effort to provide comfortable treatment, maintain clear communication, and offer excellent customer service to everyone who walks through our doors.  We are a business that is founded foremost on integrity, and recognize that we have been blessed so that we can be a blessing to our patients.</p>
-      <p>Within our team, we practice trust, honesty, and open communication with each other in order to function as a cohesive team.  We value the relationships we have with our families, our other team members, and our patients.  We are committed to growing as a team, both relationally and professionally.  We understand that it requires a well-functioning team, both in and outside the office, to provide the best care and service for our patients.</p>
+      <section class="mission">
+        <h1 id="Our-Mission">Our Mission</h1>
+        <p>Our dental team is dedicated to provide the best possible patient care for our patients.  We value the relationships that are formed and developed through the dental care we provide, and are committed to partner with our patients to achieve and maintain the best possible oral, and overall, health for them.  We know all of our patients are unique individuals who require personalized quality care, and thus make every effort to provide comfortable treatment, maintain clear communication, and offer excellent customer service to everyone who walks through our doors.  We are a business that is founded foremost on integrity, and recognize that we have been blessed so that we can be a blessing to our patients.</p>
+        <p>Within our team, we practice trust, honesty, and open communication with each other in order to function as a cohesive team.  We value the relationships we have with our families, our other team members, and our patients.  We are committed to growing as a team, both relationally and professionally.  We understand that it requires a well-functioning team, both in and outside the office, to provide the best care and service for our patients.</p>
+      </section>
   </section>
 </section>
