add "Welcome Chloe!"

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -60,11 +60,11 @@ title: About Us
         </section>
         <section class="teammate">
           <figure>
-            <img src="{{site.baseurl}}/img/image_bio_stella.png" alt="Stella's profile picture">
+            <img src="{{site.baseurl}}/img/image_bio_chloe.png" alt="Chloe's profile picture">
           </figure>
-          <h3 class="name">Stella</h3>
+          <h3 class="name">Chloe</h3>
           <h4 class="job">Office Administrator</h4>
-          <p class="bio">Stella has been with us since 2014, and we have enjoyed her cheerfulness as a new addition to our team.  She enjoys doing arts and crafts and serving at her church in her spare time.</p>
+          <p class="bio">Chloe is the newest addition to our team, and her bright personality is a perfect fit! She joined us May 2016 and has gotten to know our patients well since then. She enjoys traveling, eating good food, and serving at her church in her spare time.</p>
         </section>
       </section>
 
