update "About Us" banner img

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -17,7 +17,7 @@ title: About Us
   </nav>
   <section class="page-content">
       <figure>
-          <img src="{{site.baseurl}}/img/image_about_banner.png" alt="about us banner">
+          <img src="{{site.baseurl}}/img/image_about_banner5.png" alt="about us banner">
       </figure>
 
       <section class="drchang-bio">
