--- a/patientinfo/index.html
+++ b/patientinfo/index.html
@@ -7,6 +7,7 @@ category: patientinfo
   <nav class="page-nav">
       <h1>Patient Info</h1>
       <section>
+        <h2><a href="#Patient-Forms">Patient Forms</a></h2>
         <h2><a href="#Your-Appointment">Your Appointment</a></h2>
         <h2><a href="#Financial-Arrangements">Financial Arrangements/Insurance</a></h2>
       </section>
@@ -15,28 +16,35 @@ category: patientinfo
       <figure>
           <img src="{{site.baseurl}}/img/banner/patientinfo_banner.png" alt="patient info banner">
       </figure>
-  <h1 id="Your-Appointment">Your Appointment</h1>
-  <p>At your first appointment, you can expect Dr. Chang to provide a complete examination that includes a diagnosis of any dental decay (cavities) and periodontal disease (gum disease) present, and a screening for oral cancer.  Also included is a review of your medical and dental history as well as radiographs (x-rays) to help us determine the best plan of action for achieving and maintaining your dental health.  If you have a primary concern or issue you would like Dr. Chang to take special note of, please inform her of this so she can best address your concerns in the context of your entire dental health.</p>
-  <p>Following the examination, Dr. Chang and our team will go over her findings and inform you of the treatment she recommends.  If you have dental insurance, we will inform you of your available benefits for dental treatment and an estimate of your out-of-pocket portion at your request.  With this information, you can make a well-informed decision about your dental care.  We are here to help you achieve and maintain optimal dental health, so do not hesitate to ask us any questions you may have.  We will do our best to try and answer them.</p>
 
-  <h1 id="Financial-Arrangements">Financial Arrangements / Insurance</h1>
-  <p>Dr. Chang and our team are committed to providing you with quality dental care at an reasonable price.  We know the importance of being informed when making large purchases, and therefore we are available to answer any financial questions you may have regarding your dental treatment.</p>
-  <p>Our office gladly accepts these forms of payment:</p>
-  <ul>
-    <li>Cash</li>
-    <li>Check</li>
-    <li>Credit and Debit Cards (Visa, MasterCard, and Discover) Dental</li>
-  </ul>
-  <p>Our office also accepts many dental insurances, and will file the insurance claims for you.  Deductibles and co-payments, or the portion of treatment that the insurance will not cover, will be due at the time dental services are rendered.</p>
-  <p>Please provide us with the most recent and accurate insurance information so that we can process claims quickly and properly for you.  If any changes happen to your dental insurance, please inform us of this at the time of service.</p>
-  <p>We are in network for the following dental insurance plans:</p>
-  <ul>
-    <li>Aetna</li>
-    <li>Cigna</li>
-    <li>Delta Dental</li>
-    <li>HealthSmart</li>
-  </ul>
-  <p>We will gladly accept other dental insurance plans (such as, but not limited to, Ameritas, Blue Cross Blue Shield, Metlife, and United Concordia) as long as they allow you to see out-of-network providers.</p>
-  <p>If you have any other questions regarding finances or insurance, do not hesitate to call our office at (919) 783-6551.</p>
+      <h1 id="Patient-Forms">Patient Forms</h1>
+      <ul>
+        <li><a target="_blank" href="https://patientviewer.com/WebFormsGWT/GWT/WebForms/WebForms.html?DentalOfficeID=29439&WebSheetDefID=18531">Registration Form</a></li>
+        <li><a target="_blank" href="https://patientviewer.com/WebFormsGWT/GWT/WebForms/WebForms.html?DentalOfficeID=29439&WebSheetDefID=18539">Medical History Form</a></li>
+      </ul>
+
+      <h1 id="Your-Appointment">Your Appointment</h1>
+      <p>At your first appointment, you can expect Dr. Chang to provide a complete examination that includes a diagnosis of any dental decay (cavities) and periodontal disease (gum disease) present, and a screening for oral cancer.  Also included is a review of your medical and dental history as well as radiographs (x-rays) to help us determine the best plan of action for achieving and maintaining your dental health.  If you have a primary concern or issue you would like Dr. Chang to take special note of, please inform her of this so she can best address your concerns in the context of your entire dental health.</p>
+      <p>Following the examination, Dr. Chang and our team will go over her findings and inform you of the treatment she recommends.  If you have dental insurance, we will inform you of your available benefits for dental treatment and an estimate of your out-of-pocket portion at your request.  With this information, you can make a well-informed decision about your dental care.  We are here to help you achieve and maintain optimal dental health, so do not hesitate to ask us any questions you may have.  We will do our best to try and answer them.</p>
+
+      <h1 id="Financial-Arrangements">Financial Arrangements / Insurance</h1>
+      <p>Dr. Chang and our team are committed to providing you with quality dental care at an reasonable price.  We know the importance of being informed when making large purchases, and therefore we are available to answer any financial questions you may have regarding your dental treatment.</p>
+      <p>Our office gladly accepts these forms of payment:</p>
+      <ul>
+        <li>Cash</li>
+        <li>Check</li>
+        <li>Credit and Debit Cards (Visa, MasterCard, and Discover) Dental</li>
+      </ul>
+      <p>Our office also accepts many dental insurances, and will file the insurance claims for you.  Deductibles and co-payments, or the portion of treatment that the insurance will not cover, will be due at the time dental services are rendered.</p>
+      <p>Please provide us with the most recent and accurate insurance information so that we can process claims quickly and properly for you.  If any changes happen to your dental insurance, please inform us of this at the time of service.</p>
+      <p>We are in network for the following dental insurance plans:</p>
+      <ul>
+        <li>Aetna</li>
+        <li>Cigna</li>
+        <li>Delta Dental</li>
+        <li>HealthSmart</li>
+      </ul>
+      <p>We will gladly accept other dental insurance plans (such as, but not limited to, Ameritas, Blue Cross Blue Shield, Metlife, and United Concordia) as long as they allow you to see out-of-network providers.</p>
+      <p>If you have any other questions regarding finances or insurance, do not hesitate to call our office at (919) 783-6551.</p>
   </section>
 </section>
