add weekly-schedule table to /contactinfo page

--- a/contactus/index.html
+++ b/contactus/index.html
@@ -9,6 +9,7 @@ category: contactus
       <section>
         <p>Please contact us with any questions you many have, or if you are interested in scheduling an appointment</p>
         {% include contactinfo.html %}
+        {% include weeklyschedule.html %}
       </section>
   </nav>
   <section class="page-content">
