update payment type details

--- a/patientinfo/index.html
+++ b/patientinfo/index.html
@@ -33,18 +33,19 @@ category: patientinfo
       <ul>
         <li>Cash</li>
         <li>Check</li>
-        <li>Credit and Debit Cards (Visa, MasterCard, and Discover) Dental</li>
+        <li>Credit and Debit Cards (Visa, MasterCard, and Discover)</li>
       </ul>
       <p>Our office also accepts many dental insurances, and will file the insurance claims for you.  Deductibles and co-payments, or the portion of treatment that the insurance will not cover, will be due at the time dental services are rendered.</p>
       <p>Please provide us with the most recent and accurate insurance information so that we can process claims quickly and properly for you.  If any changes happen to your dental insurance, please inform us of this at the time of service.</p>
       <p>We are in network for the following dental insurance plans:</p>
       <ul>
         <li>Aetna</li>
+        <li>Blue Cross Blue Shield (Dental Blue)</li>
         <li>Cigna</li>
         <li>Delta Dental</li>
         <li>HealthSmart</li>
       </ul>
-      <p>We will gladly accept other dental insurance plans (such as, but not limited to, Ameritas, Blue Cross Blue Shield, Metlife, and United Concordia) as long as they allow you to see out-of-network providers.</p>
+      <p>We will gladly accept other dental insurance plans (such as, but not limited to, Ameritas, Metlife, and United Concordia) as long as they allow you to see out-of-network providers.</p>
       <p>If you have any other questions regarding finances or insurance, do not hesitate to call our office at (919) 783-6551.</p>
   </section>
 </section>
