--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -60,11 +60,11 @@ title: About Us
         </section>
         <section class="teammate">
           <figure>
-            <img src="{{site.baseurl}}/img/bio/chloe.png" alt="Chloe's profile picture">
+            <img src="{{site.baseurl}}/img/bio/placeholder.png" alt="Placeholder profile picture">
           </figure>
-          <h3 class="name">Chloe</h3>
+          <h3 class="name">Lindsay</h3>
           <h4 class="job">Office Administrator</h4>
-          <p class="bio">Chloe is the newest addition to our team, and her bright personality is a perfect fit! She joined us May 2016 and has gotten to know our patients well since then. She enjoys traveling, eating good food, and serving at her church in her spare time.</p>
+          <p class="bio">Lindsay joined our team May 2017 and looks forward to getting to know our patients better!</p>
         </section>
       </section>
 
